Add pagination for questions